src/grammar.txt
ExpressionStatement:
  Expression (';')?
VariableDeclaration:
  Identifier ('=' | ':=') Expression
Expression:
  PipeExpression
PipeExpression:
  PipeExpression ('|>') OrExpression
  OrExpression
OrExpression:
  OrExpression ('||') AndExpression
  AndExpression
AndExpression:
  AndExpression ('&&') EqualExpression
  EqualExpression
EqualExpression:
  EqualExpression ('==' | '!=') RelationalExpression
  RelationalExpression
RelationalExpression:
  RelationalExpression ('<' | '<=' | '>' | '>=') NegativeExpression
  NegativeExpression
NegativeExpression:
  ('!')? AdditiveExpression
AdditiveExpression:
  AdditiveExpression ('+' | '-') MultiplicativeExpression
  MultiplicativeExpression
MultiplicativeExpression:
  MultiplicativeExpression ('*' | '/') UnaryExpression
  UnaryExpression
UnaryExpression:
  ('+' | '-')? Primary
Primary:
  CallExpression
  MemberAccessExpression
  Primitive
CallExpression:
  CallExpression '(' CallArguments? ')'
CallArguments:
  Expression (',' Expression)*
Primitive:
  Number
  String
  Identifier
  '(' Expression ')'
